gcp-kubernetes/template.deployment-echo.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echo

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "false"
    # gcloud compute addresses create g-street --global
    kubernetes.io/ingress.global-static-ip-name: "g-street"
spec:
  rules:
  - host: g-street.1ambda.io
    http:
      paths:
      - path: /hello
        backend:
          serviceName: echo
          servicePort: 80
#  tls:
#  - secretName: 1ambda-io-tls
#    hosts:
#    - g-street.1ambda.io
