gcp-kubernetes/template.deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-frontend
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: service-frontend
    spec:
      containers:
      - name: service-frontend
        image: gcr.io/zepl-test/service-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-gateway
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: service-gateway
    spec:
      containers:
      - name: service-gateway
        image: gcr.io/zepl-test/service-gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: service-frontend

---
apiVersion: v1
kind: Service
metadata:
  name: service-gateway
spec:
  type: NodePort
  ports:
  - port: 30001
    targetPort: 30001
    protocol: TCP
    name: http
  selector:
    app: service-gateway

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "g-street"
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: "g-street"
spec:
  rules:
  - host: g-street.1ambda.io
    http:
      paths:
      - path: /api/*
        backend:
          serviceName: service-gateway
          servicePort: 30001
      - path: /*
        backend:
          serviceName: service-frontend
          servicePort: 80
  tls:
  - secretName: 1ambda-io-tls
    hosts:
    - g-street.1ambda.io
